--- a/S2IndividualProjectDnDPrototype/S2IndividualProjectDnDPrototype.csproj
+++ b/S2IndividualProjectDnDPrototype/S2IndividualProjectDnDPrototype.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\LogicLayer\LogicLayer.csproj" />
   </ItemGroup>
 
 </Project>
